--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.5",
+		"axios": "^1.7.2",
 		"framer-motion": "^11.2.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.52.0",
 		"react-icons": "^5.2.1",
+		"react-loader-spinner": "^6.1.6",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
+		"react-toastify": "^10.0.5",
 		"swiper": "^11.1.4",
 		"usestate": "^1.1.3"
 	},
 	"devDependencies": {
+		"@hookform/devtools": "^4.3.1",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
 		"@vitejs/plugin-react": "^4.2.1",
