--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.7.2",
 		"framer-motion": "^11.2.4",
+		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.52.0",
